got saving working in-session

--- a/src/components/sidebar/downloadsPane/DownloadsPane.styl
+++ b/src/components/sidebar/downloadsPane/DownloadsPane.styl
@@ -8,7 +8,7 @@
     line-height: 40px;
     font-size: 14pt;
     color: white;
-    background-color: rgba(10, 131, 201, .8);
+    background-color: rgba(10, 131, 201, 1);
     .downloadsPane-choices-titleIcon {
       margin-left: 10px;
     }
@@ -22,7 +22,7 @@
       color: #0A83C9;
       &:hover {
         color: white;
-        background-color: #0A83C9;
+        background-color: #3A9AD2;
       }
     }
     .downloadsPane-choices-csv {
