--- a/src/components/sidebar/Sidebar.styl
+++ b/src/components/sidebar/Sidebar.styl
@@ -38,3 +38,12 @@
     }
   }
 }
+
+.Select{
+  .Select-menu-outer{
+    background-color: rgba(255,255,255,.9);
+  }
+  .Select-option{
+    background-color: rgba(255,255,255,0);
+  }
+}
