added in additional coloring for the range-based selection objects

--- a/src/components/sidebar/analysisPane/visualization/PassFailVisualizer.styl
+++ b/src/components/sidebar/analysisPane/visualization/PassFailVisualizer.styl
@@ -171,10 +171,13 @@
     height: 100%;
     opacity: .7;
   }
-  .validationBar-true {
+  .validationBar-active {
     background-color: #81C784;
   }
-  .validationBar-false {
-    background-color: tomato;
+  .validationBar-inactive {
+    background-color: tomato!important;
+  }
+  .validationBar-invalid {
+    background-color: #FFB74D;
   }
 }
