--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -191,10 +191,16 @@
     height: 100%;
     opacity: .7;
   }
-  .validationBar-true {
+  .validationBar-active {
     background-color: #81C784;
   }
-  .validationBar-false {
-    background-color: tomato;
+  .validationBar-inactive {
+    background-color: tomato!important;
+  }
+  // .validationBar-valid {
+  //   background-color: #81C784;
+  // }
+  .validationBar-invalid {
+    background-color: #FFB74D;
   }
 }
