--- a/src/index.styl
+++ b/src/index.styl
@@ -71,3 +71,18 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.rc-slider-tooltip{
+  z-index: 1000;
+  transform: translateY(5px);
+}
+.rc-slider-tooltip-content{
+  transform: translateY(7.5px);
+  .rc-slider-tooltip-arrow{
+    transform: inherit!important;
+    border-top-color: #0A83C9!important;
+  }
+  .rc-slider-tooltip-inner{
+    background-color: #0A83C9;
+  }
+}
