--- a/src/mapbox/Map.styl
+++ b/src/mapbox/Map.styl
@@ -8,6 +8,21 @@
   padding: 5px;
   .mapboxgl-popup-close-button{
     z-index: 100;
+    height: 25px;
+    width: 25px;
+    font-size: 16pt;
+    // color: rgb(100,100,100);
+    color: tomato;
+    transition-duration: .2s;
+    // background-color: rgb(245,245,245);
+    border-bottom-left-radius: 3px;
+    &:hover{
+      background-color: tomato;
+      color: white;
+      
+      // color: rgb(20,20,20);
+      // color: tomato;
+    }
   }
   .selection {
     position: relative;
