removed a few in dev items

--- a/src/components/sidebar/downloadsPane/DownloadsPane.styl
+++ b/src/components/sidebar/downloadsPane/DownloadsPane.styl
@@ -13,6 +13,19 @@
       margin-left: 10px;
     }
   }
+  .downloadsPane-choices-map{
+    .downloadsPane-choices-pdf {
+      width: calc(100% - 10px);
+      margin-left: 5px;
+      margin-right: 5px;
+      margin-bottom: 2.5px;
+      color: #FF424A;
+      &:hover {
+        color: white;
+        background-color: #FF424A;
+      }
+    }
+  }
   .downloadsPane-choices-censusData {
     .downloadsPane-choices-json {
       width: calc(50% - 7.5px);
@@ -34,17 +47,6 @@
       &:hover {
         color: white;
         background-color: #FF9800;
-      }
-    }
-    .downloadsPane-choices-pdf {
-      width: calc(100% - 10px);
-      margin-left: 5px;
-      margin-right: 5px;
-      margin-top: 2.5px;
-      color: #FF424A;
-      &:hover {
-        color: white;
-        background-color: #FF424A;
       }
     }
   }
