--- a/src/index.styl
+++ b/src/index.styl
@@ -12,6 +12,19 @@ body {
   display: flex;
   border: none;
   overflow: hidden;
+  .legendCanvas{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: white
+  z-index: 2000
+  height: 300;
+  width: 300;
+  #legendImage{
+    height: 100%;
+    width: 100%;
+  }
+}
 }
 #app-wrapper {
   height: 100vh;
