--- a/src/components/sidebar/analysisPane/commonComponents/ActiveSlider.styl
+++ b/src/components/sidebar/analysisPane/commonComponents/ActiveSlider.styl
@@ -1,23 +1,32 @@
 .activeSlider{
-  width: 25px;
+  width: 37px;
   // transform: rotate(-90deg);
   .slidingContainer{
     width: 100%
-    height: 10px;
-    border-radius: 10px;
+    height: 15px;
+    border-radius: 15px;
     top: 50%;
     position: relative;
     cursor: pointer;
+    
     // removed transitions for now, transition was running on filter removal...
     transition-duration: .2s;
     .slidingBead{
       position: absolute;
-      height: 10px;
-      width: 10px;
-      border-radius: 10px;
+      height: 15px;
+      width: 15px;
+      border-radius: 15px;
       background-color: white;
       box-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.35);
       transition-duration: .1s;
+    }
+    .slider-message{
+      user-select: none;
+      position: absolute;
+      top: 50%;
+      margin-top: -9.75px;
+      color: white;
+      font-size: 7pt;
     }
   }
 }
@@ -27,13 +36,21 @@
     .slidingBead{
       right: 0px;
     }
+    .slider-message{
+      left: 0px;
+      margin-left: 5px;
+    }
   }
 }
 .activeSlider-false{
   .slidingContainer{
     background-color: tomato; 
     .slidingBead{
-      right: calc(100% - 10px);
+      right: calc(100% - 15px);
+    }
+    .slider-message{
+      right: 0px;
+      margin-right: 3.5px;
     }
   }
 }
