--- a/src/components/sidebar/mapsPane/SavedMapChoice.styl
+++ b/src/components/sidebar/mapsPane/SavedMapChoice.styl
@@ -6,31 +6,16 @@
     transition-duration: 0.2s!important;
     color: white!important;
   }
-  // .savedMapChoice-control-download{
-  //   color: white!important;
-  // }
-  // .savedMapChoice-control-delete{
-  //   color: white!important;
-  // }
 }
-// .savedMapChoice:active{
-//   transition-duration: 0.2s!important;
-//   background-color: #0A83C9!important;
-//   color: white!important;
-//   .savedMapChoice-control-download{
-//     color: white!important;
-//   }
-//   .savedMapChoice-control-delete{
-//     color: white!important;
-//   }
-// }
 .savedMapChoice{
   padding-left: 5px;
   &:hover{
     .savedMapChoice-control-icon{
       opacity: 1!important
     }
+    // background-color: white!important;
   }
+  background-color: white;
 }
 .savedMapChoice-title{
   margin-right: 20px;
@@ -49,7 +34,6 @@
   flex-wrap: nowrap;
   align-items: stretch;
   justify-content: space-between;
-  // background-color: rgb(225,225,225)
   .savedMapChoice-control-delete{
     &:hover{
       color: red
@@ -62,16 +46,12 @@
   }
   .savedMapChoice-control{
     width: 100%;
-    // height: 19.25px;
     border-radius: 3px;
     .savedMapChoice-control-icon{
       user-select: none;
-      // opacity: .7;
     }
     &:hover{
-      // color: white;1
       text-shadow: 0px 0px 1px rgba(150,150,150, .2);
-      // background-color: rgba(255,255,255,.8);
     }
   }
 }
