--- a/src/components/sidebar/navBar/NavBarButton.styl
+++ b/src/components/sidebar/navBar/NavBarButton.styl
@@ -7,6 +7,7 @@
   font-size: 16.5pt;
   cursor: pointer;
   .navBarButton-count{
+    z-index: 500;
     height: 13px;
     width: 13px;
     // color: rgba(255, 183, 77, 1);
@@ -21,6 +22,7 @@
     font-size: 8pt;
     font-weight: bold;
     text-shadow: 0px 0px 1px rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
   }
 }
 .navBarButton-active{
@@ -58,7 +60,7 @@
   top: 2px;
   right: 0px;
   height: calc(100% - 4px);
-  width: 4px;
+  width: 3.25px;
   display: flex;
   flex-direction: column;
   justify-content: center
@@ -68,4 +70,36 @@
   border-radius: 2px;
   background-color: #FFB74D;
   transition-duration: .2s;
+}
+
+.loadingSpinner-small {
+    position: absolute;
+    z-index: 499;
+    box-sizing: border-box;
+    border-radius: 100%;
+    border: 3.5px solid rgba(255, 255, 255, 0.0);
+    border-top-color: #FFB74D;
+    animation: spin .5s infinite linear;
+    width: 80%;
+    height: 80%;
+    top: 10%;
+    left: 10%;
+  }
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
