fixed up a few things in the maps panel

--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -190,6 +190,7 @@
     width: 4px;
     height: 100%;
     opacity: .7;
+    transition-duration: .15s;
   }
   .validationBar-active {
     background-color: #81C784;
