--- a/src/components/sidebar/analysisPane/visualization/ClassesVisualizer.styl
+++ b/src/components/sidebar/analysisPane/visualization/ClassesVisualizer.styl
@@ -151,6 +151,7 @@
     width: 4px;
     height: 100%;
     opacity: .7;
+    transition-duration: .15s;
   }
   .validationBar-true {
     background-color: #81C784;
