--- a/src/components/sidebar/analysisPane/visualization/PassFailVisualizer.styl
+++ b/src/components/sidebar/analysisPane/visualization/PassFailVisualizer.styl
@@ -169,6 +169,7 @@
     width: 4px;
     height: 100%;
     opacity: .7;
+    transition-duration: .15s;
   }
   .validationBar-active {
     background-color: #81C784;
