--- a/src/components/sidebar/mapsPane/SavedMapChoice.styl
+++ b/src/components/sidebar/mapsPane/SavedMapChoice.styl
@@ -7,6 +7,9 @@
     color: white!important;
   }
 }
+.savedMapChoice-notClicked{
+  
+}
 .savedMapChoice{
   padding-left: 5px;
   &:hover{
@@ -47,6 +50,7 @@
   .savedMapChoice-control{
     width: 100%;
     border-radius: 3px;
+    color: inherit;
     .savedMapChoice-control-icon{
       user-select: none;
     }
