--- a/src/components/sidebar/mapsPane/MapsPane.styl
+++ b/src/components/sidebar/mapsPane/MapsPane.styl
@@ -57,25 +57,17 @@
     }
     
     .mapChoice-load-clicked{
-      background-color: #0A83C9;
-      border-color: white;
+      box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.45);
+      background-color: rgb(250,250,250);
+      color: rgb(80,80,80);
+      border-color: rgb(80,80,80);
       span{
-        color: white;
+        color: rgb(80,80,80);
       }
       a{
-        color: white;
+        color: rgb(80,80,80);
       }
     }
-    // .mapChoice-load:active{
-    //   background-color: #0A83C9;
-    //   border-color: white;
-    //   span{
-    //     color: white;
-    //   }
-    //   a{
-    //     color: white;
-    //   }
-    // }
     .mapChoice-load-notClicked{
       background-color: white;
       box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.45);
@@ -97,29 +89,17 @@
       width: calc(50% - 7.5px);
     }
     .mapChoice-control-clicked{
-      background-color: #0A83C9;
-      color: white;
-      border-color: white;
+      box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.45);
+      background-color: rgb(250,250,250);
+      color: rgb(80,80,80);
+      border-color: rgb(80,80,80);
       a{
-        color: white;
+        color: rgb(80,80,80);
       }
       .mapChoice-uploadMask{
-        background-color: #0A83C9;
+        background-color: rgb(250,250,250);
       }
     }
-    // .mapChoice-control:active{
-    //   background-color: #0A83C9;
-    //   border-color: white;
-    //   span{
-    //     color: white;
-    //   }
-    //   a{
-    //     color: white;
-    //   }
-    //   .mapChoice-uploadMask{
-    //     background-color: #0A83C9;
-    //   }
-    // }
     .mapChoice-control-notClicked{
       background-color: white;
       box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.45);
