add debouncing to potentially solve the firefox flickeriung

--- a/src/components/sidebar/mapsPane/MapsPane.styl
+++ b/src/components/sidebar/mapsPane/MapsPane.styl
@@ -43,6 +43,7 @@
         }
       }
     }
+
     .mapsPane-button-odd {
       margin-left: 5px;
       margin-right: 2.5px;
@@ -52,11 +53,11 @@
       margin-left: 2.5px;
     }
 
-    .mapChoice-load {
+    .mapsPane-loadButton {
       width: calc(50% - 7.5px);
     }
     
-    .mapChoice-load-clicked{
+    .mapsPane-loadButton-clicked{
       box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.45);
       background-color: rgb(250,250,250);
       color: rgb(80,80,80);
@@ -68,7 +69,7 @@
         color: rgb(80,80,80);
       }
     }
-    .mapChoice-load-notClicked{
+    .mapsPane-loadButton-notClicked{
       background-color: white;
       box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.45);
       color: rgb(160,160,160);
@@ -85,10 +86,10 @@
       }
     }
 
-    .mapChoice-control{
+    .mapsPane-controlButton{
       width: calc(50% - 7.5px);
     }
-    .mapChoice-control-clicked{
+    .mapsPane-controlButton-clicked{
       box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.45);
       background-color: rgb(250,250,250);
       color: rgb(80,80,80);
@@ -96,18 +97,18 @@
       a{
         color: rgb(80,80,80);
       }
-      .mapChoice-uploadMask{
+      .mapsPane-controlButton-uploadMask{
         background-color: rgb(250,250,250);
       }
     }
-    .mapChoice-control-notClicked{
+    .mapsPane-controlButton-notClicked{
       background-color: white;
       box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.45);
       color: rgb(160,160,160);
       a {
         color: rgb(160,160,160);
       }
-      .mapChoice-uploadMask{
+      .mapsPane-controlButton-uploadMask{
         background-color: white;
       }
       &:hover{
@@ -120,14 +121,14 @@
       }
     }
 
-    .mapChoice-control-1{
+    .mapsPane-controlButton-1{
       border: 1px solid rgb(180,180,180);
     }
-    .mapChoice-control-2{
+    .mapsPane-controlButton-2{
       border: 1px dashed rgb(160,160,160);
     }
-    .mapChoice-control{
-      .mapChoice-uploadMask{
+    .mapsPane-controlButton{
+      .mapsPane-controlButton-uploadMask{
         position: absolute;
         top: 0px;
         left: 0px;
