fixed input field being blank issue for firefox

--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -170,9 +170,15 @@
             margin-right: 5px;
           }
           .rangeInput {
+            position: relative;
             width: 75px;
+            line-height: 20px;
             height: 20px;
+            // line-height: 2;
+            // height: 2em;
             font-size: 9.5pt;
+            // padding needs to be reset for firefox
+            padding: 0px;
             padding-left: 3px;
             padding-right: 3px;
             border-radius: 3px;
