forgot to add in styling to parallel styl

--- a/src/components/sidebar/analysisPane/visualization/PassFailVisualizer.styl
+++ b/src/components/sidebar/analysisPane/visualization/PassFailVisualizer.styl
@@ -150,8 +150,10 @@
           }
           .rangeInput {
             width: 75px;
+            line-height: 20px;
             height: 20px;
             font-size: 9.5pt;
+            padding: 0px;
             padding-left: 3px;
             padding-right: 3px;
             border-radius: 3px;
