fixed reset button animation and clicking limitation

--- a/src/components/sidebar/analysisPane/visualization/VisualizeClassesSection.styl
+++ b/src/components/sidebar/analysisPane/visualization/VisualizeClassesSection.styl
@@ -1,9 +1,23 @@
 .visualizeClassesSection{
+  position: relative;
   // margin-top: 8px;
+  .velocityTransitionGroup{
+    width: 100%
+    clear: both;
+  }
   .visClassesControls{
+    position: relative;
     margin-top: 20px;
+    width: 100%;
+    right: 100%;
+    transition: right 0.25s ease
+    height: max-content;
+    display: flex!important;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
     .visClassesControls-resetButton{
-      
       text-align: center;
       line-height: 25px;
       height: 25px;
