--- a/src/components/sidebar/analysisPane/filters/FiltersSection.styl
+++ b/src/components/sidebar/analysisPane/filters/FiltersSection.styl
@@ -15,6 +15,48 @@
       color: rgb(237, 237, 237);
     }
   }
+  .filtersControls{
+    position: relative;
+    margin-top: 20px;
+    width: 100%;
+    right: 100%;
+    transition: right 0.25s ease
+    height: max-content;
+    display: flex!important;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    .filtersControls-resetButton{
+      text-align: center;
+      line-height: 25px;
+      height: 25px;
+      width: 70px;
+      cursor: pointer;
+      transition-duration: 0.3s;
+      border-radius: 4px;
+      .filtersControls-resetButton-text{
+        user-select: none;
+        .filtersControls-resetButton-icon{
+          margin-right 5px;
+          font-size: 9pt;
+        } 
+      }
+    }
+    .filtersControls-resetButton-clicked{
+      background-color: #81C784;
+      color: white;
+      box-shadow: 1px 1px .5px rgba(100, 100, 100, 0.4);
+    }
+    .filtersControls-resetButton-notClicked{
+      background-color: #81C784;
+      color: white;
+      box-shadow: 2px 2px 3px rgba(100, 100, 100, 0.22);
+      &:hover{
+        box-shadow: 2.7px 2.7px 8px rgba(50, 50, 50, 0.22);
+      }
+    }
+  }
 }
 
 .addFilterMessage {
