fixed issues with colorbar not resetting correctly

--- a/src/components/sidebar/navBar/NavBarButton.styl
+++ b/src/components/sidebar/navBar/NavBarButton.styl
@@ -58,7 +58,7 @@
 .activeBarContainer{
   position: absolute;
   top: 2px;
-  right: 0px;
+  left: 0px;
   height: calc(100% - 4px);
   width: 3.25px;
   display: flex;
