fixes a few minor todos, and updates todos

--- a/src/components/sidebar/mapsPane/MapsPane.styl
+++ b/src/components/sidebar/mapsPane/MapsPane.styl
@@ -91,14 +91,19 @@
     }
     .mapsPane-controlButton-clicked{
       box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.45);
-      background-color: rgb(250,250,250);
-      color: rgb(80,80,80);
-      border-color: rgb(80,80,80);
+      // background-color: rgb(250,250,250);
+      background-color: #81C784;
+      // color: rgb(80,80,80);
+      color: white;
+      // border-color: rgb(80,80,80);
+      border-color: #81C784
       a{
-        color: rgb(80,80,80);
+        // color: rgb(80,80,80);
+        color: white;
       }
       .mapsPane-controlButton-uploadMask{
-        background-color: rgb(250,250,250);
+        // background-color: rgb(250,250,250);
+        background-color: #81C784;
       }
     }
     .mapsPane-controlButton-notClicked{
@@ -112,11 +117,14 @@
         background-color: white;
       }
       &:hover{
-        color: rgb(80,80,80);
+        // color: rgb(80,80,80);
+        color: #81C784;
         a{
-          color: rgb(80,80,80);
+          // color: rgb(80,80,80);
+          color: #81C784;
         }
-        border-color: rgb(80,80,80);
+        // border-color: rgb(80,80,80);
+        border-color: #81C784;
         box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.45);
       }
     }
