--- a/src/mapbox/Map.styl
+++ b/src/mapbox/Map.styl
@@ -11,10 +11,10 @@
     height: 25px;
     width: 25px;
     font-size: 16pt;
-    // color: rgb(100,100,100);
+    line-height: 25px;
+    text-align: center!important;
     color: tomato;
     transition-duration: .2s;
-    // background-color: rgb(245,245,245);
     border-bottom-left-radius: 3px;
     &:hover{
       background-color: tomato;
