added in credits

--- a/src/mapbox/Map.styl
+++ b/src/mapbox/Map.styl
@@ -4,6 +4,9 @@
   left: 436px;
   width: calc(100vw - 436px);
 }
+.mapboxgl-ctrl-bottom-right{
+  bottom: 40px!important;
+}
 .mapboxgl-popup-content {
   padding: 5px;
   .mapboxgl-popup-close-button{
