added in new recommended maps

--- a/src/components/sidebar/mapsPane/MapsPane.styl
+++ b/src/components/sidebar/mapsPane/MapsPane.styl
@@ -23,15 +23,19 @@
       z-index: 250;
       position: relative;
       height: 75px;
-      text-align: center;
       cursor: pointer;
-      line-height: 75px;
       transition-duration: .2s;
       user-select: none;
       a{
         transition-duration: .2s;
       }
       margin-bottom: 5px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
       .mapsPane-button-title{
         // color: rgb(160,160,160);
         font-size: 13.5pt;
