--- a/src/mapbox/Map.styl
+++ b/src/mapbox/Map.styl
@@ -35,6 +35,7 @@
       position: relative;
       .selectionTitle {
         margin-left: 3px;
+        margin-right: 20px;
         position: relative;
         vertical-align: middle;
         line-height: 20px;
