fixed margin issues for the filter and visualization panes

--- a/src/components/sidebar/analysisPane/filters/FiltersSection.styl
+++ b/src/components/sidebar/analysisPane/filters/FiltersSection.styl
@@ -18,6 +18,7 @@
   .filtersControls{
     position: relative;
     margin-top: 20px;
+    margin-bottom: 20px;
     width: 100%;
     right: 100%;
     transition: right 0.25s ease
