--- a/src/components/sidebar/analysisPane/visualization/VisualizeClassesSection.styl
+++ b/src/components/sidebar/analysisPane/visualization/VisualizeClassesSection.styl
@@ -4,6 +4,7 @@
   .visClassesControls{
     position: relative;
     margin-top: 20px;
+    margin-bottom: 20px;
     width: 100%;
     right: 100%;
     transition: right 0.25s ease
