--- a/src/components/sidebar/analysisPane/visualization/VisualizePassFailSection.styl
+++ b/src/components/sidebar/analysisPane/visualization/VisualizePassFailSection.styl
@@ -3,6 +3,7 @@
   .visPassFailControls{
     position: relative;
     margin-top: 20px;
+    margin-bottom: 20px;
     width: 100%;
     right: 100%;
     transition: right 0.25s ease
