--- a/src/components/legend/LegendEntry.styl
+++ b/src/components/legend/LegendEntry.styl
@@ -13,18 +13,22 @@
   }
 }
 .legendEntry{
-  height: 25px;
+  min-height: 25px;
   line-height: 25px;
   position: relative;
   width: 100%;
   border-radius: 3px;
   transition: box-shadow 0.08s linear;
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 2px;
   .fa-search-plus{
-    line-height: 25px;
+    // line-height: 25px;
     margin-right: 5px;
     opacity: 0;
-    float: right;
     transition: color 0.08s linear;
     color: rgb(100,100,100);
   }
@@ -33,11 +37,6 @@
     width: 15px;
     position: relative;
     border-radius: 3px;
-    float: left;
-    margin-left: 2px;
-    margin-right: 8px;
-    top: 50%;
-    margin-top: -7.5px;
     z-index: 200;
     opacity: .8;
     .legendEntry-colorSquare-inner{
@@ -63,7 +62,12 @@
   }
   .legendEntry-title{
     float: left;
+    flex-grow: 1;
+    white-space: normal;
     // this takes into account the zoom icon;
     margin-right: 18.93px;
+    margin-left: 5px;
+    line-height: 15px;
+    max-width: 325px;
   }
 }
