--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -1,8 +1,4 @@
 .AppInterface {
-  position: absolute;
-  z-index: 100;
-  width: 100vw;
-  height: 100vh;
-  pointer-events: none;
-  // turn pointer events on for all children of the AppInterface
+  width: 100%;
+  height: 100%;
 }
