--- a/src/index.styl
+++ b/src/index.styl
@@ -12,45 +12,57 @@
   user-select: none;
   height: 100vh;
   width: 100vw;
-  top: 0px;
+  bottom: 0px;
   left: 0px;
-  background-color: rgb(220, 220, 220);
+  background-image: linear-gradient(135deg, #34abfa, #585CF4);
   z-index: 1000000;
-  opacity: 1;
   transition-duration: .5s;
-  -webkit-transition-property: opacity; /* Safari */
-  transition-property: opacity;
-  .loadingSpinner {
+  overflow: hidden;
+  .loadingBar-container {
     position: absolute;
-    z-index: 1000;
-    box-sizing: border-box;
-    border-radius: 100%;
-    border: 5px solid rgba(255, 255, 255, 0.2);
-    border-top-color: #0A83C9;
-    animation: spin .5s infinite linear;
-    width: 80px;
-    height: 80px;
-    margin-top: -40px;
-    margin-left: -40px;
-    left: 50%;
-    top: 50%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    height: 100%;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+  }
+  .loadingBar {
+    position: relative
+    height: 30%;
+    width: 3px;
+    background-color: white;
+    animation: upDown .8s infinite linear;
+  }
+  .loadingBar-backdrop {
+    position: relative
+    height: 100%;
+    width: 3px;
+    background-color: rgba(255,255,255,.2);
   }
 }
 
-@-webkit-keyframes spin {
+@-webkit-keyframes upDown {
   0% {
-    -webkit-transform: rotate(0deg);
+    -webkit-transform: translate3d(0px, 0px, 0px);
+  }
+  50% {
+    -webkit-transform: translate3d(0px, 70vh, 0px);
   }
   100% {
-    -webkit-transform: rotate(360deg);
+    -webkit-transform: translate3d(0px, 0px, 0px);
   }
 }
 
-@keyframes spin {
+@keyframes upDown {
   0% {
-    transform: rotate(0deg);
+    transform: translate3d(0px, 0px, 0px);
+  }
+  50% {
+    transform: translate3d(0px, 70vh, 0px);
   }
   100% {
-    transform: rotate(360deg);
+    transform: translate3d(0px, 0px, 0px);
   }
 }
