--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -2,3 +2,13 @@
   width: 100%;
   height: 100%;
 }
+
+.tempContainer {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  z-index: 100;
+}
