--- a/src/components/mapShowcaser/loader/LoadingPane.styl
+++ b/src/components/mapShowcaser/loader/LoadingPane.styl
@@ -1,8 +1,10 @@
 .loadingPane-active {
   bottom: 0px;
+  opacity: 1;
 }
 .loadingPane-inactive {
   bottom: 100%;
+  opacity: 0;
 }
 .loadingPane {
   position: absolute;
@@ -13,7 +15,7 @@
   left: 0px;
   background-image: linear-gradient(135deg, #34abfa, #585CF4);
   z-index: 1000000;
-  transition: bottom .5s ease-in;
+  transition: bottom .3s ease-in, opacity 0.3s linear;
   overflow: hidden;
   .loadingBar-container {
     position: absolute;
@@ -30,13 +32,13 @@
     height: 30%;
     width: 3px;
     background-color: white;
-    animation: upDown .8s infinite linear;
+    animation: upDown 1s infinite linear;
   }
   .loadingBar-backdrop {
     position: relative
     height: 100%;
     width: 3px;
-    background-color: rgba(255,255,255,.2);
+    background-color: rgba(255,255,255,.3);
   }
 }
 
