--- a/src/components/mapShowcaser/mapSelector/MapSelector.styl
+++ b/src/components/mapShowcaser/mapSelector/MapSelector.styl
@@ -1,22 +1,87 @@
-.mapSelector {
-  position: absolute;
-  top: 0px;
-  left: 0px;
+buttonSize = 60px;
+transitionSpeed = .15s;
+
+.mapSelector-open-true {
   height: 100%;
   width: 100%;
-  background: black;
+  border-radius: 0%;
+  .mapSelector-button {
+    color: rgba(255,255,255, .8);
+    border-radius: 0% 0% 0% 100%;
+    justify-content: flex-start;
+    align-items: flex-end;
+    opacity: 0.8;
+    transition: opacity 0.2s linear;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  .mapOptions-container {
+    opacity: 1;
+    border-radius: 0%;
+    pointer-events: auto;
+  }
+}
+
+.mapSelector-open-false {
+  height: buttonSize;
+  width: buttonSize;
+  border-radius: 50%;
+  margin: 10px;
+  .mapSelector-button {
+    color: rgba(255,255,255, .8);
+    border-radius: 50% 50% 50% 50%;
+    justify-content: center;
+    align-items: center;
+    &:hover {
+      .mapSelector-button {
+        color: rgba(255,255,255, 1);
+      }
+    }
+  }
+  .mapOptions-container {
+    opacity: 0;
+    border-radius: 50%;
+    pointer-events: none;
+  }
+}
+
+.mapSelector {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  pointer-events: auto;
+  overflow: none;
+  transition: height transitionSpeed linear, width transitionSpeed linear;
+  .mapSelector-button {
+    position: absolute;
+    z-index: 1000;
+    top: 0px;
+    right: 0px;
+    height: buttonSize;
+    width: buttonSize;
+    display: flex;
+    flex-direction: column;
+    font-size: 15pt; 
+    padding: 10px;
+    background-image: linear-gradient(135deg, #34abfa, #585CF4);
+    border: none;
+    cursor: pointer;
+    transition: border-radius transitionSpeed linear;
+  }
   .mapOptions-container {
     position: absolute;
     top: 0px;
-    left: 0px;
+    right: 0px;
     height: 100%;
     width: 100%;
     overflow-y: auto;
-
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: stretch;
     align-content: stretch;
+    background: black;
+    transition: opacity transitionSpeed linear, border-radius transitionSpeed linear;
   }
 }
