solid version of map splitting is up!

--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -1,5 +1,28 @@
 .AppInterface {
   width: 100%;
   height: 100%;
+  .showcase-masterContainer {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%
+  }
+  .showcase1-container {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 50%;
+    background: none;
+  }
+  .showcase2-container {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 100%;
+    width: 50%;
+    background: none;
+  }
 }
 
