--- a/src/components/mapShowcaser/loader/LoadingPane.styl
+++ b/src/components/mapShowcaser/loader/LoadingPane.styl
@@ -10,8 +10,8 @@
   position: absolute;
   pointer-events: auto;
   user-select: none;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   left: 0px;
   background-image: linear-gradient(135deg, #34abfa, #585CF4);
   z-index: 1000000;
