map splitting working with exit buttons as well

--- a/src/components/showcaseControls/MapSplitter.styl
+++ b/src/components/showcaseControls/MapSplitter.styl
@@ -22,11 +22,12 @@
     }
     .mapSplitter-dividerPreview {
       width: 1.5px;
-      background-color: white; 
+      background-color: #3E95F8;
       box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.8);
       transition: opacity .1s linear, box-shadow .1s linear, margin 0.1s linear;
       box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.8);      
       flex-grow: 1;
+      margin: 20px;
     }
     .mapSplitter-dividerPreview-hover {
       opacity: 1;
@@ -35,10 +36,10 @@
       opacity: 0;
     }
     .mapSplitter-dividerPreview-press {
-      margin: 5px;
+      margin: 5px!important;
     }
     .mapSplitter-dividerPreview-unpress {
-      margin: 20px;
+      // margin: 20px;
     }
   }
 }
