--- a/src/components/mapShowcaser/mapSelector/MapOption.styl
+++ b/src/components/mapShowcaser/mapSelector/MapOption.styl
@@ -53,6 +53,7 @@
       font-family: 'Noto Sans';
       font-weight: 700;
       letter-spacing: 3px;
+      line-height: 23px;
     }
     .mapOption-underline-container {
       height: 5%;
